- added v3 version of application with repository layer in GORM and postgres implementation for db with gorm
- Implemented additional models for DB and functions for ease of life
- implemented viper as config management tool
- added sirupsen logger implementation
- added postgres in req for V3 and in deployments
- updated swagger with new endpoints:
 	- added drinks/deactivate (soft delete) and drinks/activate (reactivate) drinks endpoints
	- added removal of once initialized coffeemachine
