# cmd/CoffeeMachineRestApiV3/controllers/money.go
@@ -1,13 +1,13 @@
 package controllers
 
 import (
-	"fmt"
 	"net/http"
 	"strconv"
 
 	"github.com/gin-gonic/gin"
-	"github.com/kOstovic/CoffeeMachine/internal/models"
 	log "github.com/sirupsen/logrus"
+
+	"github.com/kOstovic/CoffeeMachine/cmd/CoffeeMachineRestApiV3/repository"
 )
 
 type Money struct {
@@ -44,10 +44,10 @@ func putDenomination(c *gin.Context) {
 // @Summary Get all denominations available
 // @Description Get all denominations available
 // @Produce json
-// @Success 200 {object} models.Denomination
+// @Success 200 {object} Denomination
 // @Router /money [get]
 func getAllAvailableDenomination(c *gin.Context) {
-	c.JSON(http.StatusOK, models.GetCurrentMoney())
+	c.JSON(http.StatusOK, repository.GetCurrentMoney())
 }
 
 // getDenominationByName godoc
@@ -55,14 +55,14 @@ func getAllAvailableDenomination(c *gin.Context) {
 // @Description Get denominations by name from query
 // @Param name query string false "name of denomination to get"
 // @Produce json
-// @Success 200 {object} models.Denomination
+// @Success 200 {object} Denomination
 // @Failure 400,404
 // @Router /money [get]
 func getDenominationByName(c *gin.Context) {
 	name := c.Query("name")
-	cm, err := models.GetDenominationValueByName(name)
+	cm, err := repository.GetDenominationValueByName(name)
 	if err != nil {
-		c.JSON(http.StatusBadRequest, err.Error())
+		c.JSON(checkErrCode(err), err.Error())
 		return
 	} else {
 		c.JSON(http.StatusOK, cm)
@@ -75,21 +75,21 @@ func getDenominationByName(c *gin.Context) {
 // @Param denomination body Denomination true "Update Denomination object with Put option"
 // @Accept json
 // @Produce json
-// @Success 200 {object} models.Denomination
+// @Success 200 {object} Denomination
 // @Failure 400,404
 // @Failure 500
 // @Router /money [put]
 func putAllDenomination(c *gin.Context) {
-	cm, err := checkMoneyFromURL(c)
+	cm, err := checkDenFromBody(c)
 	if err != nil {
 		c.JSON(http.StatusBadRequest, err.Error())
-		log.Warnf("Could not update Denomination because of error: " + err.Error())
+		log.Warnf("Could not update Denomination %v because of error: "+err.Error(), cm)
 		return
 	}
-	cm, err = models.UpdateDenominationPut(cm)
+	cm, err = repository.UpdateDenominationPut(cm)
 	if err != nil {
-		c.JSON(http.StatusBadRequest, err.Error())
-		log.Warnf("Could not update Denomination because of error: " + err.Error())
+		c.JSON(checkErrCode(err), err.Error())
+		log.Warnf("Could not update Denomination %v because of error: "+err.Error(), cm)
 		return
 	} else {
 		c.JSON(http.StatusOK, cm)
@@ -104,7 +104,7 @@ func putAllDenomination(c *gin.Context) {
 // @Param value query int false "value of denomination to change"
 // @Param denomination body Denomination false "Update Denomination object with Put option"
 // @Produce json
-// @Success 200 {object} models.Denomination
+// @Success 200 {object} Denomination
 // @Failure 400,404
 // @Failure 500
 // @Router /money [put]
@@ -113,7 +113,7 @@ func putDenominationByName(c *gin.Context) {
 	valueStr := c.Query("value")
 	if name == "" || valueStr == "" {
 		c.JSON(http.StatusBadRequest, "name and value must be in query for putDenominationByName operation")
-		log.Warnf("Could not put drink Denomination by name because name is empty")
+		log.Warnf("Could not put Denomination by name because name is empty")
 		return
 	}
 	value, err := strconv.Atoi(valueStr)
@@ -122,14 +122,15 @@ func putDenominationByName(c *gin.Context) {
 		log.Warnf("Could not put in Denomination called %v because of error: %v", name, err.Error())
 		return
 	}
-	cm, err := models.UpdateDenominationValueByName(name, value)
+	cm, err := repository.UpdateDenominationValueByName(name, value)
 	if err != nil {
-		c.JSON(http.StatusBadRequest, err.Error())
+		c.JSON(checkErrCode(err), err.Error())
 		log.Warnf("Could not put in Denomination called %v because of error: %v", name, err.Error())
 		return
 	}
+	log.Infof("Denomination updated over put by name with values %v", cm)
 	c.JSON(http.StatusOK, cm)
-	log.Debugf("Update Denomination in machine named %v to value %v", name, value)
+
 }
 
 // patchDenomination godoc
@@ -138,42 +139,25 @@ func putDenominationByName(c *gin.Context) {
 // @Param denomination body Denomination true "Update Denomination object with Patch option"
 // @Accept json
 // @Produce json
-// @Success 200 {object} models.Ingredient
+// @Success 200 {object} Ingredient
 // @Failure 400,404
 // @Failure 500
 // @Router /money [patch]
 func patchDenomination(c *gin.Context) {
-	cm, err := checkMoneyFromURL(c)
+	cm, err := checkDenFromBody(c)
 	if err != nil {
 		c.JSON(http.StatusBadRequest, err.Error())
-		log.Warnf("Could not patch Denomination because of error: %v", err.Error())
+		log.Warnf("Could not patch Denomination %v because of error: %v", err.Error(), cm)
 		return
 	}
-	cm, err = models.UpdateDenominationPatch(cm)
+	cm, err = repository.UpdateDenominationPatch(cm)
 	if err != nil {
-		c.JSON(http.StatusBadRequest, err.Error())
-		log.Warnf("Could not patch Denomination because of error: %v", err.Error())
+		c.JSON(checkErrCode(err), err.Error())
+		log.Warnf("Could not patch Denomination %v because of error: %v", err.Error(), cm)
 		return
 	} else {
 		c.JSON(http.StatusOK, cm)
-	}
-	log.Debugf("Patched Denomination in machine %v", cm)
-}
-
-func checkMoneyFromURL(c *gin.Context) (models.Denomination, error) {
-	var denomination Denomination
-	if c.ShouldBindQuery(&denomination) == nil {
-		log.Debugf("====== Bind By Query String ====== from request %v", denomination)
-		return models.Denomination{Half: denomination.Half,
-			One: denomination.One, Two: denomination.Two,
-			Five: denomination.Five, Ten: denomination.Ten}, nil
-	} else if c.ShouldBindJSON(&denomination) == nil {
-		log.Debugf("====== Bind By JSON ====== from request %v", denomination)
-		return models.Denomination{Half: denomination.Half,
-			One: denomination.One, Two: denomination.Two,
-			Five: denomination.Five, Ten: denomination.Ten}, nil
-	} else {
-		log.Debugf("Denomination could not be parsed from request %v", denomination)
-		return models.Denomination{}, fmt.Errorf("Denomination could not be parsed")
+		log.Infof("Denomination updated over patch with values %v", cm)
+		return
 	}
 }
